base state of html and css calculator files working

--- a/public/mypage.html
+++ b/public/mypage.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <main>
-            Hello World!!
+            Hello World!!<br>
+            cmpt 276
         </main>
     </body>
 </html>
