decimal place added

--- a/public/calculator.html
+++ b/public/calculator.html
@@ -21,7 +21,7 @@
                 <div class="grey">
 
                     <h2 class="red">Activities</h2>
-                    <b id="warning">invalid or empty entry will be considered 0%, delete unused activity</b>
+                    <b id="warning">Invalid or empty entry will be considered 0%, delete unused activity, two deciaml place input</b>
                     <div class="table_scroll">
                         <table id="table">
 
